backend/test_output_18.txt
Reusing configuration cache.
> Task :frontend:compileJava NO-SOURCE
> Task :backend:processResources UP-TO-DATE
> Task :frontend:processResources NO-SOURCE
> Task :frontend:classes UP-TO-DATE
> Task :frontend:processTestResources NO-SOURCE
> Task :backend:processTestResources UP-TO-DATE
> Task :frontend:compileTestJava NO-SOURCE
> Task :frontend:testClasses UP-TO-DATE
> Task :frontend:test NO-SOURCE
> Task :backend:compileJava UP-TO-DATE
> Task :backend:classes UP-TO-DATE

> Task :backend:compileTestJava FAILED
/app/backend/src/test/java/sgc/integracao/CDU13IntegrationTest.java:318: error: unclosed comment
        /*
        ^
/app/backend/src/test/java/sgc/integracao/CDU13IntegrationTest.java:370: error: reached end of file while parsing

2 errors

[Incubating] Problems report is available at: file:///app/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':backend:compileTestJava'.
> Compilation failed; see the compiler output below.
  /app/backend/src/test/java/sgc/integracao/CDU13IntegrationTest.java:370: error: reached end of file while parsing

  /app/backend/src/test/java/sgc/integracao/CDU13IntegrationTest.java:318: error: unclosed comment
          /*
          ^
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 3s
4 actionable tasks: 1 executed, 3 up-to-date
Configuration cache entry reused.
